--- a/Esbic/app/src/main/res/layout/call_main.xml
+++ b/Esbic/app/src/main/res/layout/call_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/callmanagement_bg1">
+    android:background="">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/width100"
@@ -27,7 +27,7 @@
             android:layout_height="@dimen/width550"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/callmanagement_bg2"
+            android:background=""
             android:orientation="horizontal">
             <LinearLayout
                 android:layout_gravity="center"
