--- a/Esbic/app/src/main/res/layout/main_activity.xml
+++ b/Esbic/app/src/main/res/layout/main_activity.xml
@@ -90,47 +90,47 @@
         android:background="@drawable/bg"
         >
         <!--温度,最低温度最高温度,时间+天气开始-->
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/rel"
-            android:layout_width="@dimen/width380"
-            android:layout_height="@dimen/width110"
-            android:layout_marginTop="@dimen/width20"
-            android:layout_marginBottom="@dimen/width10"
-            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/width55"
+            android:layout_gravity="right"
+            android:layout_marginRight="@dimen/width62"
             android:orientation="horizontal">
           <TextView
               android:id="@+id/weather"
               android:layout_width="wrap_content"
-              android:layout_height="@dimen/width40"
+              android:layout_height="wrap_content"
               android:text="多云"
-              android:layout_marginTop="@dimen/width50"
-              android:layout_toLeftOf="@+id/weather_icon"
-              style="@style/text_33_ffffff"/>
+              android:layout_marginTop="@dimen/width35"
+              style="@style/text_36_ffffff"/>
             <ImageView
                 android:id="@+id/weather_icon"
-                android:layout_width="@dimen/width120"
-                android:layout_height="@dimen/width90"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
+                android:layout_width="@dimen/width118"
+                android:layout_height="@dimen/width84"
+                android:layout_marginLeft="@dimen/width10"
                 android:background="@drawable/weather_9"/>
-        </RelativeLayout>
+        </LinearLayout>
         <!--温度，最高低温度，时间，天气结束 -->
         <!--刷新开始-->
         <View
-            android:layout_gravity="center"
-            android:layout_width="@dimen/width300"
-            android:layout_marginLeft="@dimen/width30"
-            android:layout_height="@dimen/width5"
+            android:layout_gravity="right"
+            android:layout_width="@dimen/width321"
+            android:layout_marginRight="@dimen/width62"
+            android:layout_height="@dimen/width3"
+            android:layout_marginTop="@dimen/width20"
             android:background="@drawable/the_white_line"/>
 
         <TextClock
-            android:layout_gravity="center"
+            android:layout_gravity="right"
             android:gravity="center"
-            android:textSize="75sp"
-            android:layout_marginBottom="@dimen/width15"
+            android:textSize="@dimen/width95"
+            android:layout_marginTop="@dimen/width24"
             android:textColor="#FFFFFF"
-            android:layout_width="@dimen/width360"
-            android:layout_height="@dimen/width110" />
+            android:layout_marginRight="@dimen/width62"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <!--刷新结束 -->
         <!--地址+年月日开始-->
