--- a/Esbic/app/src/main/res/layout/wifi_setting.xml
+++ b/Esbic/app/src/main/res/layout/wifi_setting.xml
@@ -72,7 +72,7 @@
             android:layout_width="@dimen/width70"
             android:layout_height="@dimen/width80"
             android:visibility="invisible"
-            android:background="@drawable/wifi"/>
+            android:background=""/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
