--- a/Esbic/app/src/main/res/layout/call_main.xml
+++ b/Esbic/app/src/main/res/layout/call_main.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="">
+    android:background="@drawable/bg_3"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/width100"
-        android:background="@drawable/home_top_bg"
+        android:background="@drawable/top_bg"
         >
         <ImageButton
             android:id="@+id/back"
@@ -27,7 +28,6 @@
             android:layout_height="@dimen/width550"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:background=""
             android:orientation="horizontal">
             <LinearLayout
                 android:layout_gravity="center"
