--- a/Esbic/app/src/main/res/layout/on_call.xml
+++ b/Esbic/app/src/main/res/layout/on_call.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/monitor_bg">
+    android:background="@drawable/bg_4">
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
         android:layout_height="67px"
