--- a/Esbic/app/src/main/res/layout/wifi_setting.xml
+++ b/Esbic/app/src/main/res/layout/wifi_setting.xml
@@ -1,33 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_5">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/width120"
-        android:orientation="horizontal">
+        android:layout_height="@dimen/width93"
+        android:background="@drawable/top_bg">
         <ImageButton
             android:id="@+id/wifi_setting_back"
-            android:layout_marginLeft="@dimen/width40"
             android:layout_gravity="center"
-            android:layout_width="@dimen/width100"
-            android:layout_height="@dimen/width100"
-            android:background="@drawable/back"/>
+            android:layout_marginLeft="@dimen/width50"
+            android:layout_width="@dimen/width36"
+            android:layout_height="@dimen/width81"
+            android:background="@drawable/top_back" />
         <TextView
-            android:layout_gravity="center"
-            android:gravity="center|left"
-            android:layout_width="@dimen/width150"
-            android:layout_height="@dimen/width100"
-            android:textSize="@dimen/textsize30"
-            android:text="主页面"/>
-        <TextView
-            android:layout_marginLeft="@dimen/width270"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_width="@dimen/width150"
-            android:layout_height="@dimen/width100"
-            android:textSize="@dimen/textsize40"
-            android:text="Wifi设置"/>
+            android:layout_width="@dimen/width50"
+            android:layout_height="@dimen/width27"
+            android:layout_marginTop="@dimen/width30"
+            style="@style/text_25_ffffff"
+            android:text="返回"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -72,7 +64,7 @@
             android:layout_width="@dimen/width70"
             android:layout_height="@dimen/width80"
             android:visibility="invisible"
-            android:background=""/>
+            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
