--- a/Esbic/app/src/main/res/values/styles.xml
+++ b/Esbic/app/src/main/res/values/styles.xml
@@ -58,6 +58,12 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="text_30_000000">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">@dimen/textsize30</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="text_20_ffffff">
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">@dimen/textsize20</item>
