--- a/Esbic/app/src/main/res/layout/project_password_alter.xml
+++ b/Esbic/app/src/main/res/layout/project_password_alter.xml
@@ -14,6 +14,7 @@ android:layout_height="match_parent">
             android:layout_height="@dimen/width81"
             android:background="@drawable/top_back" />
         <TextView
+            android:id="@+id/project_password_alter_back2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -29,7 +30,8 @@ android:layout_height="match_parent">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="#74bace">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
