--- a/Esbic/app/src/main/res/layout/user_password_alter.xml
+++ b/Esbic/app/src/main/res/layout/user_password_alter.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_7">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/width93"
@@ -15,6 +16,7 @@
             android:layout_height="@dimen/width81"
             android:background="@drawable/top_back" />
         <TextView
+            android:id="@+id/user_password_alter_back2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -48,41 +50,42 @@
                     style="@style/text_23_ffffff"
                     android:background="@drawable/words_bg_2"/>
 
-                    <TextView
+                    <EditText
                         android:id="@+id/user_password_num_one"
                         android:textSize="@dimen/width40"
+                        android:textColor="@color/heise"
                         android:layout_width="@dimen/width67"
                         android:layout_height="@dimen/width67"
                         android:layout_marginLeft="@dimen/width24"
                         android:gravity="center"
-                        android:password="true"
+                        android:cursorVisible="false"
                         android:background="@drawable/input_box_2"/>
-                    <TextView
+                    <EditText
                         android:id="@+id/user_password_num_two"
                         android:textSize="@dimen/width40"
                         android:layout_marginLeft="@dimen/width15"
                         android:gravity="center"
-                        android:password="true"
                         android:layout_width="@dimen/width67"
                         android:layout_height="@dimen/width67"
+                        android:cursorVisible="false"
                         android:background="@drawable/cipher_icon"/>
-                    <TextView
+                    <EditText
                         android:id="@+id/user_password_num_three"
                         android:textSize="@dimen/width40"
                         android:gravity="center"
-                        android:password="true"
                         android:layout_marginLeft="@dimen/width15"
                         android:layout_width="@dimen/width67"
                         android:layout_height="@dimen/width67"
+                        android:cursorVisible="false"
                         android:background="@drawable/cipher_icon"/>
-                    <TextView
+                    <EditText
                         android:id="@+id/user_password_num_four"
                         android:textSize="@dimen/width40"
                         android:gravity="center"
-                        android:password="true"
                         android:layout_marginLeft="@dimen/width15"
                         android:layout_width="@dimen/width67"
                         android:layout_height="@dimen/width67"
+                        android:cursorVisible="false"
                         android:background="@drawable/cipher_icon"/>
 
             </LinearLayout>
@@ -97,42 +100,41 @@
                     android:text="确认新密码:"
                     style="@style/text_23_ffffff"
                     android:background="@drawable/words_bg_2"/>
-
-                <TextView
+                <EditText
                     android:id="@+id/confirm_user_password_num_one"
                     android:textSize="@dimen/width40"
                     android:layout_width="@dimen/width67"
                     android:layout_height="@dimen/width67"
                     android:layout_marginLeft="@dimen/width24"
                     android:gravity="center"
-                    android:password="true"
+                    android:cursorVisible="false"
                     android:background="@drawable/input_box_2"/>
-                <TextView
+                <EditText
                     android:id="@+id/confirm_user_password_num_two"
                     android:textSize="@dimen/width40"
                     android:layout_marginLeft="@dimen/width15"
                     android:gravity="center"
-                    android:password="true"
                     android:layout_width="@dimen/width67"
                     android:layout_height="@dimen/width67"
+                    android:cursorVisible="false"
                     android:background="@drawable/cipher_icon"/>
-                <TextView
+                <EditText
                     android:id="@+id/confirm_user_password_num_three"
                     android:textSize="@dimen/width40"
                     android:gravity="center"
-                    android:password="true"
                     android:layout_marginLeft="@dimen/width15"
                     android:layout_width="@dimen/width67"
                     android:layout_height="@dimen/width67"
+                    android:cursorVisible="false"
                     android:background="@drawable/cipher_icon"/>
-                <TextView
+                <EditText
                     android:id="@+id/confirm_user_password_num_four"
                     android:textSize="@dimen/width40"
                     android:gravity="center"
-                    android:password="true"
                     android:layout_marginLeft="@dimen/width15"
                     android:layout_width="@dimen/width67"
                     android:layout_height="@dimen/width67"
+                    android:cursorVisible="false"
                     android:background="@drawable/cipher_icon"/>
             </LinearLayout>
 
