--- a/Esbic/app/src/main/res/layout/call_main.xml
+++ b/Esbic/app/src/main/res/layout/call_main.xml
@@ -16,6 +16,7 @@
             android:layout_height="@dimen/width81"
             android:background="@drawable/top_back" />
         <TextView
+            android:id="@+id/back2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -131,6 +132,7 @@
                     android:layout_width="@dimen/width278"
                     android:layout_height="@dimen/width364"
                     android:numColumns="3"
+                    android:clickable="true"
                     android:layout_gravity="center"
                     android:horizontalSpacing="@dimen/width25"
                     android:verticalSpacing="@dimen/width20"
