--- a/Esbic/app/src/main/res/layout/monitor.xml
+++ b/Esbic/app/src/main/res/layout/monitor.xml
@@ -16,6 +16,7 @@
             android:layout_height="@dimen/width81"
             android:background="@drawable/top_back"/>
         <TextView
+            android:id="@+id/monitor_back2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -50,7 +51,7 @@
                 android:layout_gravity="center"
                 android:numColumns="2"
                 android:layout_width="@dimen/width412"
-                android:layout_height="@dimen/width400"></GridView>
+                android:layout_height="@dimen/width441"></GridView>
         </LinearLayout>
 
     </LinearLayout>
