--- a/Esbic/app/src/main/res/layout/project_setting.xml
+++ b/Esbic/app/src/main/res/layout/project_setting.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_7">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/bg_7"
+              android:orientation="vertical">
+
     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/width93"
-    android:background="@drawable/top_bg_2">
-    <ImageButton
-        android:id="@+id/project_setting_back"
-        android:layout_gravity="center"
-        android:layout_marginLeft="@dimen/width50"
-        android:layout_width="@dimen/width36"
-        android:layout_height="@dimen/width81"
-        android:background="@drawable/top_back" />
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/width93"
+        android:background="@drawable/top_bg_2">
+
+        <ImageButton
+            android:id="@+id/project_setting_back"
+            android:layout_width="@dimen/width36"
+            android:layout_height="@dimen/width81"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/width50"
+            android:background="@drawable/top_back"/>
+
         <TextView
+            android:id="@+id/project_setting_back2"
+            style="@style/text_25_ffffff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            style="@style/text_25_ffffff"
             android:text="返回"/>
-</LinearLayout>
+    </LinearLayout>
 
 
     <ImageView
@@ -47,20 +52,23 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    style="@style/text_22_ffffff"
                     android:layout_width="@dimen/width198"
                     android:layout_height="@dimen/width65"
                     android:background="@drawable/words_bg"
-                    style="@style/text_22_ffffff"
                     android:gravity="center"
                     android:text="设备地址"/>
-                <TextView
+
+                <EditText
                     android:id="@+id/project_setting_device_address"
+                    style="@style/text_22_000000"
                     android:layout_width="@dimen/width497"
                     android:layout_height="@dimen/width66"
                     android:layout_marginLeft="@dimen/width12"
+                    android:background="@drawable/input_box_3"
                     android:gravity="center"
-                    style="@style/text_22_000000"
-                    android:background="@drawable/input_box_3"/>
+                    android:maxLength="14"
+                    android:text="05楼05单元05层05房间"/>
 
             </LinearLayout>
 
@@ -72,21 +80,23 @@
 
                 <TextView
                     android:id="@+id/ip"
+                    style="@style/text_22_ffffff"
                     android:layout_width="@dimen/width198"
                     android:layout_height="@dimen/width65"
                     android:background="@drawable/words_bg"
-                    style="@style/text_22_ffffff"
                     android:gravity="center"
                     android:text="IP"/>
 
-                <TextView
+                <EditText
                     android:id="@+id/project_setting_ip"
+                    style="@style/text_22_000000"
                     android:layout_width="@dimen/width497"
                     android:layout_height="@dimen/width66"
                     android:layout_marginLeft="@dimen/width12"
+                    android:background="@drawable/input_box_3"
                     android:gravity="center"
-                    style="@style/text_22_000000"
-                    android:background="@drawable/input_box_3"/>
+                    android:maxLength="15"
+                    android:text="192.168.001.211"/>
 
 
             </LinearLayout>
@@ -99,21 +109,23 @@
 
                 <TextView
                     android:id="@+id/subnet_mask"
+                    style="@style/text_22_ffffff"
                     android:layout_width="@dimen/width198"
                     android:layout_height="@dimen/width65"
                     android:background="@drawable/words_bg"
-                    style="@style/text_22_ffffff"
                     android:gravity="center"
                     android:text="子网掩码 "/>
 
-                <TextView
-                    android:id="@+id/project__setting_subnet_mask"
+                <EditText
+                    android:id="@+id/project_setting_subnet_mask"
+                    style="@style/text_22_000000"
                     android:layout_width="@dimen/width497"
                     android:layout_height="@dimen/width66"
                     android:layout_marginLeft="@dimen/width12"
+                    android:background="@drawable/input_box_3"
                     android:gravity="center"
-                    style="@style/text_22_000000"
-                    android:background="@drawable/input_box_3"/>
+                    android:maxLength="15"
+                    android:text="255.255.255.000"/>
 
             </LinearLayout>
 
@@ -125,21 +137,23 @@
 
                 <TextView
                     android:id="@+id/gateway"
+                    style="@style/text_22_ffffff"
                     android:layout_width="@dimen/width198"
                     android:layout_height="@dimen/width65"
                     android:background="@drawable/words_bg"
-                    style="@style/text_22_ffffff"
                     android:gravity="center"
                     android:text="网关"/>
 
-                <TextView
+                <EditText
                     android:id="@+id/project_setting_gateway"
+                    style="@style/text_22_000000"
                     android:layout_width="@dimen/width497"
                     android:layout_height="@dimen/width66"
                     android:layout_marginLeft="@dimen/width12"
+                    android:background="@drawable/input_box_3"
                     android:gravity="center"
-                    style="@style/text_22_000000"
-                    android:background="@drawable/input_box_3"/>
+                    android:maxLength="15"
+                    android:text="192.168.001.254"/>
             </LinearLayout>
 
             <LinearLayout
@@ -150,22 +164,22 @@
 
                 <TextView
                     android:id="@+id/server"
+                    style="@style/text_22_ffffff"
                     android:layout_width="@dimen/width198"
                     android:layout_height="@dimen/width65"
                     android:background="@drawable/words_bg"
-                    style="@style/text_22_ffffff"
                     android:gravity="center"
                     android:text="服务器"/>
 
-                <TextView
-                    android:id="@+id/project_server"
+                <EditText
+                    android:id="@+id/project_setting_imp_server"
+                    style="@style/text_22_000000"
                     android:layout_width="@dimen/width497"
                     android:layout_height="@dimen/width66"
                     android:layout_marginLeft="@dimen/width12"
+                    android:background="@drawable/input_box_3"
                     android:gravity="center"
-                    style="@style/text_22_000000"
-                    android:background="@drawable/input_box_3"/>
-
+                    android:maxLength="15"/>
 
 
             </LinearLayout>
@@ -178,21 +192,22 @@
 
                 <TextView
                     android:id="@+id/center_management"
+                    style="@style/text_22_ffffff"
                     android:layout_width="@dimen/width198"
                     android:layout_height="@dimen/width65"
                     android:background="@drawable/words_bg"
-                    style="@style/text_22_ffffff"
                     android:gravity="center"
                     android:text="中心管理机"/>
 
-                <TextView
-                    android:id="@+id/project_center_management"
+                <EditText
+                    android:id="@+id/project_setting_center_management"
+                    style="@style/text_22_000000"
                     android:layout_width="@dimen/width497"
                     android:layout_height="@dimen/width66"
                     android:layout_marginLeft="@dimen/width12"
+                    android:background="@drawable/input_box_3"
                     android:gravity="center"
-                    style="@style/text_22_000000"
-                    android:background="@drawable/input_box_3"/>
+                    android:maxLength="15"/>
 
             </LinearLayout>
 
@@ -204,14 +219,15 @@
             android:layout_gravity="center"
             android:layout_marginLeft="@dimen/width100"
             android:orientation="vertical">
+
             <GridView
                 android:id="@+id/project_setting_input_keyboard"
-                android:numColumns="3"
-                android:horizontalSpacing="@dimen/width25"
-                android:verticalSpacing="@dimen/width20"
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:horizontalSpacing="@dimen/width25"
                 android:listSelector="#00000000"
-                android:layout_height="match_parent"></GridView>
+                android:numColumns="3"
+                android:verticalSpacing="@dimen/width20"></GridView>
 
         </LinearLayout>
 
