--- a/Esbic/app/src/main/res/layout/volume_setting.xml
+++ b/Esbic/app/src/main/res/layout/volume_setting.xml
@@ -15,6 +15,7 @@
             android:layout_height="@dimen/width81"
             android:background="@drawable/top_back" />
         <TextView
+            android:id="@+id/volume_setting_back2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -68,7 +69,7 @@
                     android:id="@+id/volume_setting_add"
                     android:layout_width="@dimen/width55"
                     android:layout_height="@dimen/width55"
-                    android:layout_marginLeft="@dimen/width27"
+                    android:layout_marginLeft="@dimen/width25"
                     android:background="@drawable/volume_add"/>
             </LinearLayout>
         </RelativeLayout>
