--- a/Esbic/app/src/main/res/layout/wifi_setting.xml
+++ b/Esbic/app/src/main/res/layout/wifi_setting.xml
@@ -15,6 +15,7 @@
             android:layout_height="@dimen/width81"
             android:background="@drawable/top_back" />
         <TextView
+            android:id="@+id/wifi_setting_back2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
