智能楼宇对讲UI屏保功能优化。

--- a/Esbic/app/src/main/res/layout/screen_saver.xml
+++ b/Esbic/app/src/main/res/layout/screen_saver.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     android:clickable="true"
     >
-    <android.support.v4.view.ViewPager
+    <com.eastsoft.android.esbic.view.MyViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="false">
-    </android.support.v4.view.ViewPager>
+    </com.eastsoft.android.esbic.view.MyViewPager>
 
 </LinearLayout>
