--- a/Esbic/app/src/main/res/values/styles.xml
+++ b/Esbic/app/src/main/res/values/styles.xml
@@ -58,10 +58,20 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="text_24_20A683">
+        <item name="android:textColor">#20A683</item>
+        <item name="android:textSize">@dimen/textsize24</item>
+    </style>
+
     <style name="text_22_ffffff">
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">@dimen/textsize22</item>
 
+    </style>
+
+    <style name="text_64_ffffff">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">@dimen/textsize64</item>
     </style>
 
     <style name="text_22_000000">
