优化界面显示内容

--- a/Esbic/app/src/main/res/layout/user_password_alter.xml
+++ b/Esbic/app/src/main/res/layout/user_password_alter.xml
@@ -59,6 +59,7 @@
                         android:layout_marginLeft="@dimen/width24"
                         android:gravity="center"
                         android:cursorVisible="false"
+                        android:password="true"
                         android:background="@drawable/input_box_2"/>
                     <EditText
                         android:id="@+id/user_password_num_two"
@@ -68,6 +69,7 @@
                         android:layout_width="@dimen/width67"
                         android:layout_height="@dimen/width67"
                         android:cursorVisible="false"
+                        android:password="true"
                         android:background="@drawable/cipher_icon"/>
                     <EditText
                         android:id="@+id/user_password_num_three"
@@ -77,6 +79,7 @@
                         android:layout_width="@dimen/width67"
                         android:layout_height="@dimen/width67"
                         android:cursorVisible="false"
+                        android:password="true"
                         android:background="@drawable/cipher_icon"/>
                     <EditText
                         android:id="@+id/user_password_num_four"
@@ -86,6 +89,7 @@
                         android:layout_width="@dimen/width67"
                         android:layout_height="@dimen/width67"
                         android:cursorVisible="false"
+                        android:password="true"
                         android:background="@drawable/cipher_icon"/>
 
             </LinearLayout>
@@ -108,6 +112,7 @@
                     android:layout_marginLeft="@dimen/width24"
                     android:gravity="center"
                     android:cursorVisible="false"
+                    android:password="true"
                     android:background="@drawable/input_box_2"/>
                 <EditText
                     android:id="@+id/confirm_user_password_num_two"
@@ -117,6 +122,7 @@
                     android:layout_width="@dimen/width67"
                     android:layout_height="@dimen/width67"
                     android:cursorVisible="false"
+                    android:password="true"
                     android:background="@drawable/cipher_icon"/>
                 <EditText
                     android:id="@+id/confirm_user_password_num_three"
@@ -126,6 +132,7 @@
                     android:layout_width="@dimen/width67"
                     android:layout_height="@dimen/width67"
                     android:cursorVisible="false"
+                    android:password="true"
                     android:background="@drawable/cipher_icon"/>
                 <EditText
                     android:id="@+id/confirm_user_password_num_four"
@@ -135,6 +142,7 @@
                     android:layout_width="@dimen/width67"
                     android:layout_height="@dimen/width67"
                     android:cursorVisible="false"
+                    android:password="true"
                     android:background="@drawable/cipher_icon"/>
             </LinearLayout>
 
