--- a/Esbic/app/src/main/res/layout/call_main.xml
+++ b/Esbic/app/src/main/res/layout/call_main.xml
@@ -44,15 +44,16 @@
                 <ListView
                     android:id="@+id/hostory_list"
                     android:layout_gravity="center"
-                    android:visibility="gone"
                     android:layout_marginTop="@dimen/width46"
                     android:layout_marginBottom="@dimen/width37"
-                    android:layout_width="@dimen/width380"
-                    android:layout_height="@dimen/width444"/>
+                    android:divider="#00000000"
+                    android:layout_width="@dimen/width356"
+                    android:layout_height="@dimen/width427"/>
                 <LinearLayout
                     android:id="@+id/control_help"
                     android:layout_gravity="center"
                     android:layout_width="@dimen/width380"
+                    android:visibility="gone"
                     android:layout_height="@dimen/width444"
                     android:layout_marginTop="@dimen/width66"
                     android:orientation="vertical">
